Add BLAS and GSL to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ cache: apt
 addons:
   apt:
     packages:
+    - libblas-dev
     - liblapack-dev
+    - libgsl0-dev
 
 script: bash -eu .travis-ci.sh
 
